--- a/.menu_map.yml
+++ b/.menu_map.yml
@@ -125,6 +125,7 @@
       1.issues-in-the-hardware-environment=硬件环境导致的问题
       2.problems-caused-by-capacity-changes=容量变化导致的问题
       3.other-problems-within-the-cluster=集群内部其他问题
+  12.data-security-management=数据库安全
 6.data-migration=数据迁移
   2.migrate-data-from-MySQL-database-to-OceanBase-database=从 MySQL 迁移到 OceanBase 数据库
   4.migrate-data-from-CSV-file-to-OceanBase-database=从 CSV 文件迁移数据到 OceanBase 数据库
@@ -171,7 +172,7 @@
       1.high-availability-architecture=高可用架构
       4.data-protection=数据保护
       5.backup-and-restoration=备份恢复
-    11.database-security=数据库安全
+    11.database-security=数据安全
     12.observer-node-architecture=OBServer 节点架构
       3.observer-thread-model=observer 线程模型
       5.memory-management=内存管理
