更新中文 yml 文件

--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -1,5 +1,429 @@
-3.user-guide=使用指南
 1.learn-more-about-oceanbase=OceanBase 介绍
+  3.compatibility-with-oracle=与 Oracle 兼容性对比
+2.quickstart=快速上手
+  1.quickly-experience-oceanbase=快速体验 OceanBase
+  2.get-started-with-oceanbase-sql.md=上手 OceanBase SQL
+  3.create-sample-application-of-mysql-mode.md=基于 MySQL 模式的创建示例应用程序
+  3.create-sample-application-of-oracle-mode.md=基于 Oracle 模式的创建示例应用程序
+  5.experience-advanced-features-of-oceanbase.md=体验 OceanBase 高级特性
+    1.experience-scalable-oltp=体验 Scalable OLTP
+    5.experience-ddl=体验 DDL
+3.develop
+  1.application-development-of-mysql-mode=基于 MySQL 模式进行应用开发
+    1.database-connection-with-client-of-mysql-mode=连接 OceanBase 数据库
+      14.use-the-database-connection-pool-of-mysql-mode=使用数据库连接池
+    2.design-a-database-object-of-mysql-mode=规划数据库对象
+    3.write-data-of-mysql-mode=数据写入
+    4.read-data-of-mysql-mode=数据读取
+      7.multi-table-join-query-of-mysql-mode=多表关联
+      8.use-operators-and-functions-in-query-of-mysql-mode=在查询中使用操作符和函数
+      9.execution-plan-of-mysql-mode=执行计划
+    5.transaction-management-of-mysql-mode=事务
+      3.transaction-savepoints-of-mysql-mode=保存点
+    6.common-errors-and-solutions-of-mysql-mode=常见报错与处理
+2.application-development-of-oracle-mode=基于 Oracle 模式进行应用开发
+  1.database-connection-of-oracle-mode=连接 OceanBase 数据库
+    13.use-the-database-connection-pool-of-oracle-mode=使用数据库连接池
+  2.design-a-database-object-of-oracle-mode=规划数据库对象
+  3.write-data-of-oracle-mode=数据写入
+  4.read-data-of-oracle-mode=数据读取
+    7.multi-table-join-query-of-oracle-mode=多表关联
+    8.use-operators-and-functions-in-query-of-oracle-mode=在查询中使用操作符和函数
+    9.execution-plan-of-oracle-mode=执行计划
+  5.transaction-management-of-oracle-mode=事务
+    3.transaction-savepoints-of-oracle-mode=保存点
+  6.common-errors-and-solutions-of-oracle-mode=常见报错与处理
+4.deploy-oceanbase=部署数据库
+  4.deploy
+    3.preparations-before-deployment-1
+    6.command-line-deployment
+      1.configure-a-deployment-environment-2
+        1.configure-a-deployment-environment-2
+        2.deploy-ocp-4
+        3.deploy-the-oceanbase-cluster-2
+        4.deploy-obproxy-4
+        5.create-an-oceanbase-tenant-2
+        6.deploy-the-oms-4
+        7.deploy-odc-4
+  5.deploy-oceanbase-database-community-edition=
+    2.local-deployment
+    4.highly-available-deployment
+5.data-migration=数据迁移
+  2.migrate-data-from-mysql-database-to-oceanbase-database
+  3.migrate-data-from-oceanbase-database-to-mysql-database
+  4.migrate-data-from-oracle-database-to-oceanbase-database
+  5.migrate-data-from-oceanbase-database-to-oracle-database
+  6.migrate-data-from-db2-luw-database-to-oceanbase-database
+  7.migrate-data-from-csv-file-to-oceanbase-database
+  9.data-migration-between-oceanbase-databases
+  10.use-sql-statements-migrate-data
+6.manage=管理数据库
+7.reference=参考指南
+  1.oceanbase-database-concepts=系统概念
+    3.multi-tenant-architecture=多租户架构
+      5.tenants-and-resource-management=租户与资源管理
+    4.database-objects=数据库对象
+      1.database-objects-of-oracle-mode=Oracle 模式
+        1.introduction-to-database-objects-of-oracle-mode==数据库对象介绍
+        2.table-of-oracle-mode=表
+          2.data-type-of-oracle-mode=数据类型
+            7.format-model-of-oracle-mode=格式模型
+        3.index-of-oracle-mode=索引
+        4.partition-of-oracle-mode=分区
+        5.view-of-oracle-mode=视图 
+        6.other-objects-of-oracle-mode=其他对象
+        7.system-view-of-oracle-mode=系统视图
+        8.data-integrity-of-oracle-mode=数据完整性
+          2.integrity-constraint-type-of-oracle-mode=完整性约束类型
+      2.database-objects-of-mysql-mode=MySQL 模式
+        1.introduction-to-database-objects-of-mysql-mode=数据库对象介绍
+        2.table-of-mysql-mode=表
+          2.data-type-of-mysql-mode=数据类型
+        3.index-of-oracle-mode=索引
+        4.partition-of-mysql-mode=分区
+        5.view-of-mysql-mode=视图
+        6.system-view-of-mysql-mode=系统视图
+        7.data-integrity-of-mysql-mode=数据完整性
+          2.integrity-constraint-type-of-mysql-mode=完整性约束类型
+    5.distributed-database-objects=分布式数据库对象
+      3.data-partitions-and-replicas=数据分区和分区副本
+        3.partition-replica-type=分区副本类型
+      4.dynamic-scaling=动态扩容和缩容
+        2.scale-in-and-scale-out-of-tenant-resources=租户内资源的扩容和缩容
+    6.data-link=数据链路
+      2.database-proxy=数据库代理
+      3.database-driver=数据库驱动
+    7.user-interface-and-query-language=用户接口和查询语言
+      1.SQL=SQL
+        1.sql-introduction=SQL 介绍
+        2.sql-statement=SQL 语句
+        5.distributed-execution-plan=分布式执行计划
+      2.PL=PL
+        1.pl-concepts=PL 概念
+          1.pl-of-oracle-mode=Oracle 模式
+          2.pl-of-mysql-mode=MySQL 模式
+    8.transaction-management=事务管理
+      1.transaction=事务
+        5.transaction-control=事务控制
+          4.transactional-control-statement=事务控制语句
+        8.distributed-transactions-1=分布式事务
+      2.transaction-concurrency-and-consistency=事务并发和一致性
+        3.concurrency-control=并发控制
+        4.transaction-isolation-level=事务隔离级别
+    9.storage-architecture=存储架构
+      2.data-storage=数据存储
+      3.dump-and-merge=转储和合并
+      6.data-integrity=数据完整性
+    10.high-data-reliability-and-availability=数据可靠性和高可用
+      1.high-availability-architecture=高可用架构
+      4.data-protection=数据保护
+      5.backup-and-recovery=备份恢复
+  2.administrator-guide=管理员指南
+    1.database-connection-and-routing=数据库连接与路由
+      2.obproxy-management=管理 OBProxy
+        2.manage-obproxy-clusters=管理 OBProxy 集群
+        3.manage-obproxy=管理 OBProxy
+      5.logical-connection=逻辑连接
+      7.route-management=路由管理
+        4.odp-routing-policy=ODP 路由策略
+    2.basic-database-management=集群和多租户管理
+      1.manage-clusters=管理集群
+        3.manage-cluster-parameters=管理集群参数
+        4.manage-zones-in-a-cluster=管理集群中的 Zone
+        5.manage-observer=管理 OBServer
+      2.configuration-management=配置管理
+      3.manage-resources=管理资源
+        3.management-resource-unit=管理资源单元
+        5.manage-resource-pools=管理资源池
+      4.manage-tenants=管理租户
+        4.manage-tenants=管理租户
+        5.manage-users-and-permissions=管理用户和权限
+          1.users-and-permissions=用户及权限介绍
+          2.oracle-mode=Oracle 模式
+            9.manage-roles-of-oracle-mode=管理角色
+          3.mysql-mode=MySQL 模式
+        13.manage-tenant-parameters=管理租户参数
+      5.manage-data-storage=管理数据存储
+        1.dump-management=转储管理
+        2.merge-management=合并管理
+        3.data-compression=数据压缩
+      7.memory-management=管理内存
+      8.management-process=管理进程
+      9.manage-logs=管理日志
+        2.log-print-level=日志打印级别
+        3.manage-the-size-and-quantity-of-log-files=日志文件大小及数量管理
+        4.view-logs=查看日志
+    3.database-object-management=数据库对象管理
+      1.manage-object-of-mysql-mode=MySQL 模式
+        1.manage-databases-of-mysql-mode=管理数据库
+        2.manage-tables-of-mysql-mode=管理表
+        4.manage-indexes-of-mysql-mode=管理索引
+        7.manage-triggers-of-mysql-mode=管理触发器
+      2.manage-object-of-oracle-mode=Oracle 模式
+        1.manage-tables-of-oracle-mode=管理表
+        3.manage-indexes-of-oracle-mode=管理索引
+        7.manage-triggers-of-oracle-mode=管理触发器
+    4.replica-management=副本管理
+      2.manage-partition-table=分区管理
+        1.oracle-mode=管理分区（Oracle 模式）
+          9.create-partition-table-index-of-oracle-mode=创建分区表索引
+        2.mysql-mode=管理分区（MySQL 模式）
+          9.create-partition-table-index-of-mysql-mode=创建分区表索引
+      4.manage-replicas=副本管理
+      5.locality-management=Locality 管理
+    5.backup-and-recovery=备份恢复
+      1.flashback=闪回
+      2.backup-and-restoration-management=备份恢复管理
+        3.log-archive=日志归档
+        4.data-backup=数据备份
+        5.cleaning-up-backed-up-data=清理备份
+        6.restore-data=恢复数据
+    6.data-security-management=数据库安全
+      1.data-storage-encryption=数据存储加密
+        2.data-storage-encryption-of-mysql-mode=MySQL 模式
+        3.data-storage-encryption-of-oracle-mode=Oracle 模式
+      2.transmission-encryption=数据传输加密
+      4.audit-database=审计数据库
+    7.management==运维管理
+      1.scale-out-and-scale-in
+        2.cluster-level-scale-out-and-scale-in=扩容和缩容
+          1.scale-out=扩容
+          2.shrink=缩容
+        3.scale-in-and-scale-out-of-tenant-resources=租户内资源的扩容和缩容
+      2.monitoring-and-alerting=监控和告警
+        2.monitoring=监控
+        3.alert=告警
+      3.daily-inspection=日常巡检
+        12.full-link-detection=全链路诊断
+      4.performance-diagnosis=性能诊断
+      5.emergency-response=应急处理
+        3.common-emergency-response=常见应急问题处理
+          1.issues-in-the-hardware-environment=硬件环境导致的问题
+          2.problems-caused-by-capacity-changes=容量变化导致的问题
+          3.other-problems-within-the-cluster=集群内部其他问题
+  3.performance-tuning-guide=性能调优
+    2.performance-related-tools=性能相关工具
+      1.system-tools=系统工具
+      2.internal-table=内部表
+      3.log=日志
+    3.system-tuning=系统调优
+      2.database-parameter-tuning=数据库参数调优
+      3.obproxy-parameter-optimization=OBProxy 参数调优
+    4.business-model-tuning=业务模型调优
+    5.sql-optimization=SQL 调优指南
+      2.sql-execution-plan=SQL 执行计划
+        2.execution-plan-operator=执行计划算子
+      3.distributed-execution-plan=分布式执行计划
+      4.sql-optimization=SQL 优化
+        3.monitor-sql-execution-performance=SQL 执行性能监控
+          4.sql-performance-analysis-example=SQL 性能分析示例
+        4.optimizer-statistics=优化器统计信息
+          2.statistics-collection-methods=统计信息收集方式
+          3.statistics-management=统计信息管理
+        5.query-rewrite=查询改写
+        6.query-optimization=查询优化
+          1.access-path=访问路径
+          2.join-algorithm=联接算法
+        7.manage-execution-plans=管理执行计划
+  4.development-reference=应用开发参考
+    1.sql-syntax=SQL 语法
+      1.system-tenants=系统租户
+        2.alter-system=ALTER SYSTEM
+      2.common-tenant-of-mysql-mode=普通租户（MySQL 模式）
+        1.basic-elements-of-mysql-mode=基本元素
+          1.data-type-of-mysql-mode=数据类型
+            2.numeric-of-mysql-mode=数值类型
+            3.date-and-time-types-of-mysql-mode=日期时间类型
+            4.string-of-mysql-mode=字符类型
+            5.large-object-of-mysql-mode=大对象和文本类型
+            8.json-formatted-data-type-of-mysql-mode=JSON 数据类型
+          2.expression-of-mysql-mode=表达式
+          3.character-set-and-collation-of-mysql-mode=字符集与字符序
+          4.literal-of-mysql-mode=字面量
+        2.operator-of-mysql-mode=运算符
+        4.functions-of-mysql-mode=函数
+          2.functions-of-mysql-mode=单行函数
+            1.date-and-time-functions-of-mysql-mode=日期时间函数
+            2.string-functions-of-mysql-mode=字符串函数
+            3.conversion-functions-of-mysql-mode=转换函数
+            4.mathematical-functions-of-mysql-mode=数学函数
+            5.comparison-functions-of-mysql-mode=比较函数
+            6.process-control-functions-of-mysql-mode=流程控制函数
+          3.aggregate-function-of-mysql-mode=聚合函数
+          4.analysis-functions-of-mysql-mode=分析函数
+          5.encryption-and-compression-functions-of-mysql-mode=加密函数
+          6.information-functions-of-mysql-mode=信息函数
+          7.json-functions-of-mysql-mode=JSON 函数
+            1.create-a-function-with-json-text-of-mysql-mode=创建 JSON 文本的函数
+            2.a-function-to-search-for-json-text-of-mysql-mode=搜索 JSON 文本的函数
+            3.function-to-modify-json-text-of-mysql-mode=修改 JSON 文本的函数
+            4.function-that-returns-the-json-text-property-of-mysql-mode=返回 JSON 文本属性的函数
+            5.json-functions-of-mysql-mode=JSON 工具函数
+            6.json-aggregate-functions-of-mysql-mode=JSON 聚合函数
+          8.other-functions-of-mysql-mode=其它函数
+        5.queries-and-subqueries-of-mysql-mode=查询和子查询
+        6.sql-statement-of-mysql-mode=SQL 语句
+          51.select-of-mysql-mode=SELECT 
+        7.ddl-function-of-mysql-mode=DDL 功能
+      3.common-tenant-of-oracle-mode=普通租户（Oracle 模式）
+          2.pseudo-column-of-oracle-mode=伪列
+          3.basic-elements-of-oracle-mode=基本元素
+            1.built-in-data-types-of-oracle-mode=内建数据类型
+              2.character-data-type-of-oracle-mode=字符数据类型
+              3.numeric-data-type-of-oracle-mode=数值数据类型
+              4.date-time-and-interval-data-types-of-oracle-mode=日期时间和间隔数据类型
+              6.large-object-data-type-of-oracle-mode=大对象数据类型
+            2.data-type-comparison-rules-of-oracle-mode=数据类型比较规则
+            3.literal-of-oracle-mode=字面量
+              4.date-and-time-literal-of-oracle-mode=日期时间字面量
+            4.format-of-oracle-mode=格式模型
+            5.null-of-oracle-mode=空值
+            6.annotation-of-oracle-mode=注释
+              4.hint-of-oracle-modeHint
+                2.hint-list-of-oracle-modeHint 清单
+            7.database-objects-of-oracle-mode=数据库对象
+            8.database-naming-convention-of-oracle-mode=数据库命名规范
+            9.database-object-reference-method-of-oracle-mode=数据库对象引用方式
+          4.operator-of-oracle-mode=运算符
+          5.functions-of-oracle-mode=函数
+            2.single-row-functions-of-oracle-mode=单行函数
+              1.numeric-functions-of-oracle-mode=数字函数
+              2.string-functions-that-return-a-string-of-oracle-mode=返回字符串的字符串函数
+              3.string-functions-that-return-numbers-of-oracle-mode=返回数字的字符串函数
+              4.date-and-time-functions-of-oracle-mode=时间日期
+              5.generic-comparison-functions-of-oracle-mode=通用比较函数
+              6.conversion-functions-of-oracle-mode=转换函数
+              7.encoding-and-decoding-functions-of-oracle-mode=编码解码函数
+              8.null-value-related-function-of-oracle-mode=空值相关函数
+              9.environment-and-identifier-functions-of-oracle-mode=环境和标识符函数
+              10.hierarchical-functions-of-oracle-mode=层次函数
+            3.aggregate-functions-of-oracle-mode=聚合函数
+            4.analysis-functions-of-oracle-mode=分析函数
+          6.expression-of-oracle-mode=表达式
+          7.condition-of-oracle-mode=条件
+          8.queries-and-subqueries-of-oracle-mode=查询和子查询
+          9.sql-statement-of-oracle-mode=SQL 语句
+              1.ddl-of-oracle-mode=DDL
+              2.dml-of-oracle-mode=DML
+                5.select-of-oracle-mode=SELECT
+              3.dcl-of-oracle-mode=DCL
+          10.ddl-function-of-oracle-mode=DDL 功能
+    2.sql-specifications-and-practices=SQL 实践和建议
+      2.sql-writing-Specification=SQL 编写规范
+      3.sql-statement-example=SQL 语句示例
+    3.pl-reference=PL 参考
+      1.what-is-pl=什么是 PL
+      2.pl-mysql=PL 参考（MySQL 模式）
+        2.storage-object-mysql=PL 存储程序
+        3.cursor-mysql=PL 游标
+        4.control-statement-mysql=PL 条件控制语句
+        5.pl-manipulation-statement-mysql=PL 数据操作语句
+        6.sql-statements-for-pl-stored-programs-mysql=PL 数据定义语句
+        7.pl-database-management-statements-mysql=PL 数据库管理语句
+        8.information_schema-dictionary-view-mysql=PL 相关字典视图
+        9.pl-exception-handling-statement-mysql=PL 异常处理
+      3.pl-oracle=PL 参考（Oracle 模式）
+        1.pl-language-basics-oracle=PL 语言基础
+          2.sa_sysdba-policy-management-package=SA_SYSDBA 策略管理包
+          3.sa_components-tag-package=SA_COMPONENTS 标签组件包
+          4.sa_label_admin-tag-management-pack=SA_LABEL_ADMIN 标签管理包
+          5.sa_policy_admin-policy-management-packs=SA_POLICY_ADMIN 策略管理包
+          6.sa_user_admin-user-tag-management-pack=SA_USER_ADMIN 用户标签管理包
+          7.sa_session-session-management-pack=SA_SESSION 会话管理包
+        2.data-type-oracle=PL 数据类型
+        3.process-control-oracle=PL 流程控制
+        4.collections-and-records-oracle=PL 集合与记录
+          7.collection-methods-oracle=集合方法
+        5.pl-static-sql-oracle=PL 静态 SQL
+          2.cursor-oracle=游标
+          4.autonomous-transactions-oracle=自治事务
+        6.dynamic-sql-oracle=PL 动态 SQL
+        7.stored-procedure-and-functions-oracle=PL 存储过程与函数
+          6.pipeline-function-oracle=管道函数
+          7.user-defined-aggregation-functions-oracle=用户自定义函数
+        8.trigger-oracle=PL 触发器
+        9.package-oracle=PL 程序包
+        10.exception-handling-oracle=PL 异常处理
+        11.ddl-operations-on-stored-pl-units-oracle=对已存储 PL 单元的 DDL 操作
+        13.pl-label-security-package=PL 系统包
+      4.pl-system-package=DBMS_AUDIT_MGMT
+        2.DBMS_AUDIT_MGMT=DBMS_AUDIT_MGMT
+        3.DBMS_APPLICATION_INFO=DBMS_APPLICATION_INFO
+        4.DBMS_CRYPTO=DBMS_CRYPTO
+        5.DBMS_DEBUG=DBMS_DEBUG
+        6.DBMS_DESCRIBE=DBMS_DESCRIBE
+        7.DBMS_JOB=DBMS_JOB
+        8.DBMS_LOB=DBMS_LOB
+        9.DBMS_LOCK=DBMS_LOCK
+        10.DBMS_METADATA=DBMS_METADATA
+        11.DBMS_OUTPUT=DBMS_OUTPUT
+        12.DBMS_PLAN_CACHE=DBMS_PLAN_CACHE
+        13.DBMS_RANDOM=DBMS_RANDOM
+        14.DBMS_RESOURCE_MANAGER=DBMS_RESOURCE_MANAGER
+        15.DBMS_SCHEDULER=DBMS_SCHEDULER
+        16.DBMS_SESSION=DBMS_SESSION
+        17.DBMS_SQL=DBMS_SQL
+        18.DBMS_STATS=DBMS_STATS
+        19.DBMS_UTILITY=DBMS_UTILITY
+        20.DBMS_XA=DBMS_XA
+        21.DBMS_XMLGEN=DBMS_XMLGEN
+        28.XMLType=XMLType 
+        22.ODCICONST=ODCICONST
+        23.UTL_FILE=UTL_FILE
+        24.UTL_ENCODE=UTL_ENCODE
+        25.UTL_I18N=UTL_I18N
+        26.UTL_RAW=UTL_RAW
+        27.anydata-type=ANYDATA TYPE
+        28.XMLType=XML Type
+    4.database-design-specifications-and-practices=数据库设计规范
+      1.object-naming-conventions=对象命名规范
+      2.object-structure-design-specification=对象结构设计规范
+    5.system-reference=系统参考
+      1.system-configuration-items=系统配置项
+        3.cluster-level-configuration-items=集群级别配置项
+        4.tenant-level-configuration-items=租户级别配置项
+      2.system-variable-of-mysql-mode=系统变量（MySQL 模式）
+      3.system-variable-of-oracle-mode=系统变量（Oracle 模式）
+      4.system-view-of-mysql-mode=系统视图（MySQL 模式）
+        2.dictionary-view-of-mysql-mode=字典视图
+        3.performance-view-of-mysql-mode=性能视图
+      5.system-view-of-oracle-mode=系统视图（Oracle 模式）
+        2.dictionary-view-of-oracle-mode=字典视图
+        3.performance-view-of-oracle-mode=性能视图
+      6.error-code-of-mysql-mode=错误码（MySQL 模式）
+      7.error-code-of-oracle-mode=错误码（Oracle 模式）
+    6.oceanbase-tools=OceanBase 工具
+    7.command-line-tools=命令行工具
+      7.ob-admin=ob_admin
+        3.clog=clog
+      8.ob-agent=OBAgent
+          1.about-obagent=关于 OBAgent
+          2.configuration-reference=配置引用
+          3.install-and-deploy-obagent=安装部署
+          4.obagent-metrics=OBAgent 指标
+      10.cdc=CDC
+        2.obcdc=obcdc
+          1.deploy-and-use-obcdc=obcdc 部署和使用
+          2.obcdc-parameters=obcdc 参数说明
+        3.oblogproxy=oblogproxy
+          1.install-and-deploy-oblogproxy=oblogproxy 安装部署
+        4.oblogmsg=oblogmsg
+      12.mysqltest=mysqltest
+        2.use-of-case=case 使用
+8.FAQ=FAQ
+9.release-notes=版本发布记录
+  100.V4.0=V4.0
+  101.enterprise-edition-history-release=企业版 OceanBase 版本发布记录
+    1.V3.2=V3.2
+    2.V3.1=3.1
+    3.V2.2=V2.2
+  102.community-edition-history-release=社区版 OceanBase 版本发布记录
+
+
+
+
+
+
 3.compatibility-with-oracle-1=与 Oracle 兼容性对比
 3.deploy-the-oceanbase-database=部署数据库
 3.preparations-before-deployment-1=部署前准备
@@ -303,7 +727,7 @@
 7.pl-reference=PL 参考
 1.what-is-pl-1=什么是 PL
 2.pl-mysql=PL 参考（MySQL 模式）
-2.storage-object=PL 存储程序
+2.storage-object-mysql=PL 存储程序
 3.cursor=PL 游标
 4.control-statement=PL 条件控制语句
 5.pl-manipulation-statement=PL 数据操作语句
