--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -37,17 +37,16 @@
   4.deploy
     3.preparations-before-deployment-1
     6.command-line-deployment
-      1.configure-a-deployment-environment-2
-        1.configure-a-deployment-environment-2
-        2.deploy-ocp-4
-        3.deploy-the-oceanbase-cluster-2
-        4.deploy-obproxy-4
-        5.create-an-oceanbase-tenant-2
-        6.deploy-the-oms-4
-        7.deploy-odc-4
-  5.deploy-oceanbase-database-community-edition=
-    2.local-deployment
-    4.highly-available-deployment
+    1.configure-a-deployment-environment-2
+    2.deploy-ocp-4
+    3.deploy-the-oceanbase-cluster-2
+    4.deploy-obproxy-4
+    5.create-an-oceanbase-tenant-2
+    6.deploy-the-oms-4
+    7.deploy-odc-4
+      5.deploy-oceanbase-database-community-edition=
+        2.local-deployment
+        4.highly-available-deployment
 5.data-migration=数据迁移
   2.migrate-data-from-mysql-database-to-oceanbase-database
   3.migrate-data-from-oceanbase-database-to-mysql-database
@@ -118,6 +117,10 @@
       1.high-availability-architecture=高可用架构
       4.data-protection=数据保护
       5.backup-and-recovery=备份恢复
+    11.database-security=数据库安全
+    12.observer-node-architecture=OBServer 节点架构
+      3.observer-thread-model=observer 线程模型
+      5.memory-management=内存管理
   2.administrator-guide=管理员指南
     1.database-connection-and-routing=数据库连接与路由
       2.obproxy-management=管理 OBProxy
@@ -367,7 +370,6 @@
         19.DBMS_UTILITY=DBMS_UTILITY
         20.DBMS_XA=DBMS_XA
         21.DBMS_XMLGEN=DBMS_XMLGEN
-        28.XMLType=XMLType 
         22.ODCICONST=ODCICONST
         23.UTL_FILE=UTL_FILE
         24.UTL_ENCODE=UTL_ENCODE
