--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -34,28 +34,34 @@
     3.transaction-savepoints-of-oracle-mode=保存点
   6.common-errors-and-solutions-of-oracle-mode=常见报错与处理
 4.deploy-oceanbase=部署数据库
-  4.deploy=
-    3.preparations-before-deployment-1=
-    6.command-line-deployment=
-    1.configure-a-deployment-environment-2=
-    2.deploy-ocp-4=
-    3.deploy-the-oceanbase-cluster-2=
-    4.deploy-obproxy-4=
-    5.create-an-oceanbase-tenant-2=
-    6.deploy-the-oms-4=
-    7.deploy-odc-4=
-      5.deploy-oceanbase-database-community-edition=
-        2.local-deployment=
-        4.highly-available-deployment=
+  3.deploy-oceanbase-database-enterprise=部署 OceanBase 企业版
+    2.preparations-before-deployment=部署前准备
+    3.graphical-interface-deployment=通过 UI 界面部署
+      1.configure-deployment-environment=部署环境配置
+      2.deploy-ocp=部署 OCP 
+      3.deploy-the-oceanbase-cluster=部署 OceanBase 集群
+      4.deploy-obproxy=部署 OBProxy
+      5.create-oceanbase-tenant=创建 OceanBase 租户
+      6.deploy-odc=部署 ODC 
+    4.command-line-deployment=通过命令行部署
+      1.configure-a-deployment-environment-command-line=部署环境配置
+      2.deploy-ocp-command-line=部署 OCP
+      3.deploy-the-oceanbase-cluster-command-line=部署 OceanBase 集群
+      4.deploy-obproxy-command-line=部署 OBProxy
+      5.create-oceanbase-tenant-command-line=创建 OceanBase 租户
+      6.deploy-odc-command-line=部署 ODC 
+  5.deploy-oceanbase-database-community-edition=部署 OceanBase 社区版
+    2.local-deployment=本地部署
+    4.highly-available-deployment=高可用部署
 5.data-migration=数据迁移
-  2.migrate-data-from-mysql-database-to-oceanbase-database=
-  3.migrate-data-from-oceanbase-database-to-mysql-database=
-  4.migrate-data-from-oracle-database-to-oceanbase-database=
-  5.migrate-data-from-oceanbase-database-to-oracle-database=
-  6.migrate-data-from-db2-luw-database-to-oceanbase-database=
-  7.migrate-data-from-csv-file-to-oceanbase-database=
-  9.data-migration-between-oceanbase-databases=
-  10.use-sql-statements-migrate-data=
+  2.migrate-data-from-mysql-database-to-oceanbase-database=从 MySQL 数据库迁移数据到 OceanBase 数据库
+  3.migrate-data-from-oceanbase-database-to-mysql-database=从 OceanBase 数据库迁移数据到 MySQL 数据库
+  4.migrate-data-from-oracle-database-to-oceanbase-database=从 Oracle 数据库迁移数据到 OceanBase 数据库
+  5.migrate-data-from-oceanbase-database-to-oracle-database=从 OceanBase 数据库迁移数据到 Oracle 数据库
+  6.migrate-data-from-db2-luw-database-to-oceanbase-database=从 DB2 数据库迁移数据到 OceanBase 数据库
+  7.migrate-data-from-csv-file-to-oceanbase-database=从 CSV 文件迁移数据到 OceanBase 数据库
+  9.data-migration-between-oceanbase-databases=OceanBase 数据库之间迁移数据
+  10.use-sql-statements-migrate-data=使用 SQL 语句迁移数据
 6.manage=管理数据库
 7.reference=参考指南
   1.oceanbase-database-concepts=系统概念
@@ -63,7 +69,7 @@
       5.tenants-and-resource-management=租户与资源管理
     4.database-objects=数据库对象
       1.database-objects-of-oracle-mode=Oracle 模式
-        1.introduction-to-database-objects-of-oracle-mode==数据库对象介绍
+        1.introduction-to-database-objects-of-oracle-mode=数据库对象介绍
         2.table-of-oracle-mode=表
           2.data-type-of-oracle-mode=数据类型
             7.format-model-of-oracle-mode=格式模型
@@ -187,9 +193,9 @@
         3.data-storage-encryption-of-oracle-mode=Oracle 模式
       2.transmission-encryption=数据传输加密
       4.audit-database=审计数据库
-    7.management==运维管理
-      1.scale-out-and-scale-in=
-        2.cluster-level-scale-out-and-scale-in=扩容和缩容
+    7.management=运维管理
+      1.scale-out-and-scale-in=扩容和缩容
+        2.cluster-level-scale-out-and-scale-in=扩容和缩容概述
           1.scale-out=扩容
           2.shrink=缩容
         3.scale-in-and-scale-out-of-tenant-resources=租户内资源的扩容和缩容
@@ -282,8 +288,8 @@
           4.format-of-oracle-mode=格式模型
           5.null-of-oracle-mode=空值
           6.annotation-of-oracle-mode=注释
-            4.hint-of-oracle-modeHint=
-              2.hint-list-of-oracle-modeHint= 清单
+            4.hint-of-oracle-modeHint=Hint
+              2.hint-list-of-oracle-modeHint=Hint 清单
           7.database-objects-of-oracle-mode=数据库对象
           8.database-naming-convention-of-oracle-mode=数据库命名规范
           9.database-object-reference-method-of-oracle-mode=数据库对象引用方式
