--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -2,10 +2,10 @@
   3.compatibility-with-oracle=与 Oracle 兼容性对比
 2.quickstart=快速上手
   1.quickly-experience-oceanbase=快速体验 OceanBase
-  2.get-started-with-oceanbase-sql.md=上手 OceanBase SQL
-  3.create-sample-application-of-mysql-mode.md=基于 MySQL 模式的创建示例应用程序
-  3.create-sample-application-of-oracle-mode.md=基于 Oracle 模式的创建示例应用程序
-  5.experience-advanced-features-of-oceanbase.md=体验 OceanBase 高级特性
+  2.get-started-with-oceanbase-sql=上手 OceanBase SQL
+  3.create-sample-application-of-mysql-mode=基于 MySQL 模式的创建示例应用程序
+  3.create-sample-application-of-oracle-mode=基于 Oracle 模式的创建示例应用程序
+  5.experience-advanced-features-of-oceanbase=体验 OceanBase 高级特性
     1.experience-scalable-oltp=体验 Scalable OLTP
     5.experience-ddl=体验 DDL
 3.develop=应用开发
@@ -21,18 +21,18 @@
     5.transaction-management-of-mysql-mode=事务
       3.transaction-savepoints-of-mysql-mode=保存点
     6.common-errors-and-solutions-of-mysql-mode=常见报错与处理
-2.application-development-of-oracle-mode=基于 Oracle 模式进行应用开发
-  1.database-connection-of-oracle-mode=连接 OceanBase 数据库
-    13.use-the-database-connection-pool-of-oracle-mode=使用数据库连接池
-  2.design-a-database-object-of-oracle-mode=规划数据库对象
-  3.write-data-of-oracle-mode=数据写入
-  4.read-data-of-oracle-mode=数据读取
-    7.multi-table-join-query-of-oracle-mode=多表关联
-    8.use-operators-and-functions-in-query-of-oracle-mode=在查询中使用操作符和函数
-    9.execution-plan-of-oracle-mode=执行计划
-  5.transaction-management-of-oracle-mode=事务
-    3.transaction-savepoints-of-oracle-mode=保存点
-  6.common-errors-and-solutions-of-oracle-mode=常见报错与处理
+  2.application-development-of-oracle-mode=基于 Oracle 模式进行应用开发
+    1.database-connection-of-oracle-mode=连接 OceanBase 数据库
+      13.use-the-database-connection-pool-of-oracle-mode=使用数据库连接池
+    2.design-a-database-object-of-oracle-mode=规划数据库对象
+    3.write-data-of-oracle-mode=数据写入
+    4.read-data-of-oracle-mode=数据读取
+      7.multi-table-join-query-of-oracle-mode=多表关联
+      8.use-operators-and-functions-in-query-of-oracle-mode=在查询中使用操作符和函数
+      9.execution-plan-of-oracle-mode=执行计划
+    5.transaction-management-of-oracle-mode=事务
+      3.transaction-savepoints-of-oracle-mode=保存点
+    6.common-errors-and-solutions-of-oracle-mode=常见报错与处理
 4.deploy-oceanbase=部署数据库
   3.deploy-oceanbase-database-enterprise=部署 OceanBase 企业版
     2.preparations-before-deployment=部署前准备
@@ -288,11 +288,12 @@
           4.format-of-oracle-mode=格式模型
           5.null-of-oracle-mode=空值
           6.annotation-of-oracle-mode=注释
-            4.hint-of-oracle-modeHint=Hint
-              2.hint-list-of-oracle-modeHint=Hint 清单
+            4.hint-of-oracle-mode=Hint
+              2.hint-list-of-oracle-mode=Hint 清单
           7.database-objects-of-oracle-mode=数据库对象
           8.database-naming-convention-of-oracle-mode=数据库命名规范
           9.database-object-reference-method-of-oracle-mode=数据库对象引用方式
+            3.reference-objects-in-a-remote-database-of-oracle-mode=引用远程数据库中的对象
         4.operator-of-oracle-mode=运算符
         5.functions-of-oracle-mode=函数
           2.single-row-functions-of-oracle-mode=单行函数
