--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -63,6 +63,33 @@
   9.data-migration-between-oceanbase-databases=OceanBase 数据库之间迁移数据
   10.use-sql-statements-migrate-data=使用 SQL 语句迁移数据
 6.manage=管理数据库
+  1.cluster-management=集群管理
+    1.cluster-management-overview=集群介绍
+    2.common-cluster-operations=集群常见操作
+    3.common-cluster-failure=集群常见故障处理
+  2.tenant-management=租户管理
+    5.common-tenant-operations=租户常见操作
+  3.replica-management=副本管理
+    2.replica-distribution=副本分布
+      2.locality-common-operations=常见操作
+    4.log-stream-introduction=日志流介绍
+    5.tenant-level-scale-in-and-out=租户扩缩容
+  4.disaster-recovery-management=容灾管理
+    2.multi-replica-disaster-recovery=多副本容灾
+  5.security-and-permissions=安全权限
+    2.authentication-and-authentication=身份鉴别和认证
+    3.access-control=访问控制
+    4.data-transfer-encryption=数据传输加密
+    5.data-storage-encryption=数据存储加密
+    6.security-audit=安全审计
+  6.backup-and-recovery=备份恢复
+    1.flashback=闪回
+      3.recycle-bin-management=回收站管理
+    2.backup-and-recovery-management=备份恢复管理
+      3.log-archive=日志归档
+      4.data-backup=数据备份
+      5.clear-backup-data=清理备份数据
+      6.restore-data=恢复数据
 7.reference=参考指南
   1.oceanbase-database-concepts=系统概念
     3.multi-tenant-architecture=多租户架构
