--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -33,7 +33,7 @@
     5.transaction-management-of-oracle-mode=事务
       3.transaction-savepoints-of-oracle-mode=保存点
     6.common-errors-and-solutions-of-oracle-mode=常见报错与处理
-4.deploy-oceanbase=部署数据库
+4.deploy=部署数据库
   3.deploy-oceanbase-database-enterprise=部署 OceanBase 企业版
     2.preparations-before-deployment=部署前准备
     3.graphical-interface-deployment=通过 UI 界面部署
@@ -69,27 +69,33 @@
     3.common-cluster-failure=集群常见故障处理
   2.tenant-management=租户管理
     5.common-tenant-operations=租户常见操作
+      8.tenant-scale-in-and-out=租户扩缩容
   3.replica-management=副本管理
     2.replica-distribution=副本分布
-      2.locality-common-operations=常见操作
-    4.log-stream-introduction=日志流介绍
-    5.tenant-level-scale-in-and-out=租户扩缩容
-  4.disaster-recovery-management=容灾管理
+      2.locality-common-operations=Locality 常见操作
+  4.high-availability=高可用
     2.multi-replica-disaster-recovery=多副本容灾
+    3.recyclebin-management=回收站管理
   5.security-and-permissions=安全权限
-    2.authentication-and-authentication=身份鉴别和认证
+    2.identification-and-authentication=身份鉴别和认证
+      1.identification-and-authentication-of-mysql-mode=MySQL 模式下的身份鉴别和认证
+      2.identification-and-authentication-of-oracle-mode=Oracle 模式下的身份鉴别和认证
     3.access-control=访问控制
+      2.user-and-permission=用户和权限
+        2.permission-of-mysql-mode=MySQL 模式下的权限管理
+        3.permission-of-oracle-mode=Oracle 模式下的权限管理
+      1.access-control-mysql-mode=MySQL 模式下的访问控制
+      2.access-control-oracle-mode=Oralce 模式下的访问控制
     4.data-transfer-encryption=数据传输加密
-    5.data-storage-encryption=数据存储加密
+    5.data-storage-encryption=数据透明加密
+      2.data-storage-encryption-of-mysql-mode=MySQL 模式下的数据透明加密
+      3.data-storage-encryption-of-oracle-mode=Oracle 模式下的数据透明加密
     6.security-audit=安全审计
   6.backup-and-recovery=备份恢复
-    1.flashback=闪回
-      3.recycle-bin-management=回收站管理
-    2.backup-and-recovery-management=备份恢复管理
-      3.log-archive=日志归档
-      4.data-backup=数据备份
-      5.clear-backup-data=清理备份数据
-      6.restore-data=恢复数据
+    3.log-archive=日志归档
+    4.data-backup=数据备份
+    5.clear-backup-data=清理备份数据
+    6.restore-data=恢复数据
 7.reference=参考指南
   1.oceanbase-database-concepts=系统概念
     3.multi-tenant-architecture=多租户架构
