--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -211,25 +211,14 @@
           9.create-partition-table-index-of-mysql-mode=创建分区表索引
       4.manage-replicas=副本管理
       5.locality-management=Locality 管理
-    5.backup-and-recovery=备份恢复
-      1.flashback=闪回
-      2.backup-and-restoration-management=备份恢复管理
-        3.log-archive=日志归档
-        4.data-backup=数据备份
-        5.cleaning-up-backed-up-data=清理备份
-        6.restore-data=恢复数据
-    6.data-security-management=数据库安全
-      1.data-storage-encryption=数据存储加密
-        2.data-storage-encryption-of-mysql-mode=MySQL 模式
-        3.data-storage-encryption-of-oracle-mode=Oracle 模式
-      2.transmission-encryption=数据传输加密
-      4.audit-database=审计数据库
     7.management=运维管理
       1.scale-out-and-scale-in=扩容和缩容
         2.cluster-level-scale-out-and-scale-in=扩容和缩容概述
           1.scale-out=扩容
           2.shrink=缩容
         3.scale-in-and-scale-out-of-tenant-resources=租户内资源的扩容和缩容
+      1.1.resource-isolation=资源隔离
+        2.resource-isolation-for-oracle-mode=资源隔离管理
       2.monitoring-and-alerting=监控和告警
         2.monitoring=监控
         3.alert=告警
@@ -453,8 +442,8 @@
 8.FAQ=FAQ
 9.release-notes=版本发布记录
   100.V4.0=V4.0
-  101.enterprise-edition-history-release=企业版 OceanBase 版本发布记录
+  101.enterprise-edition-history-release=V4.0 之前（企业版）
     1.V3.2=V3.2
     2.V3.1=V3.1
     3.V2.2=V2.2
-  102.community-edition-history-release=社区版 OceanBase 版本发布记录
+  102.community-edition-history-release=V4.0 之前（社区版）
