--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -439,7 +439,7 @@
         4.oblogmsg=oblogmsg
       12.mysqltest=mysqltest
         2.use-of-case=case 使用
-8.FAQ=FAQ
+8.FAQ=常见问题
 9.release-notes=版本发布记录
   100.V4.0=V4.0
   101.enterprise-edition-history-release=V4.0 之前（企业版）
