--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -441,9 +441,10 @@
         2.use-of-case=case 使用
 8.FAQ=常见问题
 9.release-notes=版本发布记录
-  100.V4.0=V4.0
-  101.enterprise-edition-history-release=V4.0 之前（企业版）
-    1.V3.2=V3.2
-    2.V3.1=V3.1
-    3.V2.2=V2.2
-  102.community-edition-history-release=V4.0 之前（社区版）
+  101.enterprise-edition-history-release=企业版
+    101.V3.2=V3.2
+    102.V3.1=V3.1
+    103.V2.2=V2.2
+  102.community-edition-history-release=社区版
+    100.V4.0=V4.0
+    101.V3.1=V3.1
