修改 .menu_map_zh-CN.yml

--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -1,4 +1,4 @@
-1.learn-more-about-oceanbase=OceanBase 介绍
+1.learn-more-about-oceanbase=OceanBase 简介
   4.compatibility-with-oracle=与 Oracle 兼容性对比
 2.quickstart=快速上手
   1.quickly-experience-oceanbase=快速体验 OceanBase
