--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -224,7 +224,7 @@
       1.scale-out-and-scale-in=扩容和缩容
         2.cluster-level-scale-out-and-scale-in=扩容和缩容概述
           1.scale-out=扩容
-          2.shrink=缩容
+          2.scale-in=缩容
         3.scale-in-and-scale-out-of-tenant-resources=租户内资源的扩容和缩容
       2.monitoring-and-alerting=监控和告警
         2.monitoring=监控
