--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -271,7 +271,7 @@
           4.literal-of-mysql-mode=字面量
         2.operator-of-mysql-mode=运算符
         4.functions-of-mysql-mode=函数
-          2.single-row-functions-of-mysql-mode=单行函数=单行函数
+          2.single-row-functions-of-mysql-mode=单行函数
             1.date-and-time-functions-of-mysql-mode=日期时间函数
             2.string-functions-of-mysql-mode=字符串函数
             3.conversion-functions-of-mysql-mode=转换函数
@@ -350,7 +350,7 @@
         5.pl-manipulation-statement-mysql=PL 数据操作语句
         6.sql-statements-for-pl-stored-programs-mysql=PL 数据定义语句
         7.pl-database-management-statements-mysql=PL 数据库管理语句
-        8.information_schema-dictionary-view-mysql=PL 相关字典视图
+        8.information-schema-dictionary-view-mysql=PL 相关字典视图
         9.pl-exception-handling-statement-mysql=PL 异常处理
       3.pl-oracle=PL 参考（Oracle 模式）
         1.pl-language-basics-oracle=PL 语言基础
@@ -375,7 +375,13 @@
         9.package-oracle=PL 程序包
         10.exception-handling-oracle=PL 异常处理
         11.ddl-operations-on-stored-pl-units-oracle=对已存储 PL 单元的 DDL 操作
-        13.pl-label-security-package=PL 系统包
+        13.pl-label-security-package=PL 标签安全包
+           2.sa_sysdba-policy-management-package=SA_SYSDBA 策略管理包
+           3.sa_components-tag-package=SA_COMPONENTS 标签组件包
+           4.sa_label_admin-tag-management-pack=SA_LABEL_ADMIN 标签管理包
+           5.sa_policy_admin-policy-management-packs=SA_POLICY_ADMIN 策略管理包
+           6.sa_user_admin-user-tag-management-pack=SA_USER_ADMIN 用户标签管理包
+           7.sa_session-session-management-pack=SA_SESSION 会话管理包
       4.pl-system-package=PL 系统包
         2.DBMS_AUDIT_MGMT=DBMS_AUDIT_MGMT
         3.DBMS_APPLICATION_INFO=DBMS_APPLICATION_INFO
