--- a/.menu_en.yml
+++ b/.menu_en.yml
@@ -359,7 +359,7 @@
               5.select-of-oracle-mode=SELECT
             3.dcl-of-oracle-mode=DCL
         10.ddl-function-of-oracle-mode=DDL features
-    2.sql-specifications-and-practices=SQL practices and recommendations
+    2.sql-specifications-and-practices=SQL practices and suggestions
       2.sql-writing-Specification=SQL writing guidelines
       3.sql-statement-example=SQL statement examples
     3.pl-reference=PL reference
