--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -82,7 +82,10 @@
   4.high-availability=高可用
     2.multi-replica-disaster-recovery=多副本容灾
     3.physical-standby-database-disaster-recovery=物理备库容灾
-      7.role-switch=角色切换
+      2.create-a-standby-tenant=创建备租户
+      3.log-transport-service=日志传输服务
+        2.configure-the-log-transport-service=配置日志传输服务
+      6.role-switch=角色切换
     4.arbitration-high-availability=仲裁高可用
     5.recyclebin-management=回收站管理
   5.security-and-permissions=安全权限
@@ -211,14 +214,19 @@
       1.manage-object-of-mysql-mode=MySQL 模式
         1.manage-databases-of-mysql-mode=管理数据库
         2.manage-tables-of-mysql-mode=管理表
-        4.manage-indexes-of-mysql-mode=管理索引
-        6.manage-sequence-of-mysql-mode=管理序列
-        7.manage-triggers-of-mysql-mode=管理触发器
+          10.manage-external-tables-of-mysql-mode=管理外表
+        4.manage-table-groups-of-mysql-mode=管理表组
+        5.manage-indexes-of-mysql-mode=管理索引
+        7.manage-sequence-of-mysql-mode=管理序列
+        8.manage-triggers-of-mysql-mode=管理触发器
+        9.manage-dblink-of-mysql-mode=管理 DBLink
       2.manage-object-of-oracle-mode=Oracle 模式
         1.manage-tables-of-oracle-mode=管理表
-        3.manage-indexes-of-oracle-mode=管理索引
-        7.manage-triggers-of-oracle-mode=管理触发器
-        9.manage-dblink-of-oracle-mode=管理 DBLink
+          10.manage-external-tables-of-oracle-mode=管理外表
+        3.manage-table-groups-of-oracle-mode=管理表组
+        4.manage-indexes-of-oracle-mode=管理索引
+        8.manage-triggers-of-oracle-mode=管理触发器
+        10.manage-dblink-of-oracle-mode=管理 DBLink
     4.replica-management=副本管理
       2.manage-partition-table=分区管理
         1.oracle-mode=管理分区（Oracle 模式）
